--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is node boiler plate",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
